# self-media-workbench

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
apps/content-fetch-hub/: SKILL.md
apps/content-fetch-hub/config/: fetch-settings.yaml
apps/content-fetch-hub/references/: channel-mapping.md
apps/content-fetch-hub/scripts/: fetch_content_cli.py  fetch_router.py  fetch_web_server.py  models.py  video_transcript_analysis.py  writer_obsidian.py
apps/content-fetch-hub/tests/: conftest.py  test_bilibili_adapter.py  test_bilibili_analysis_pipeline.py  test_bilibili_router.py  test_fetch_cli_side_effects.py  test_fetch_router_p6.py  test_fetch_router_runtime.py
apps/content-fetch-hub/web/: index.html
apps/content-search-layer/: SKILL.md
apps/content-search-layer/config/: create-studio.yaml  feed-sources.yaml  writer-adapters.yaml  x-author-whitelist.yaml
apps/content-search-layer/scripts/: body_queue.py  body_worker.py  collector_daemon.py  (+27 more)
apps/creative-studio/: SKILL.md
config/: default.yaml
config/examples/: local.example.yaml
config/sources/: a-stage-bilibili-sources.json  a-stage-douyin-sources.json  a-stage-feed-sources.json  a-stage-feishu-sources.json  a-stage-wechat-sources.json  a-stage-x-sources.json  a-stage-youtube-channels.json
docs/: deployment-local.md  troubleshooting.md
scripts/: check_env.py  init_runtime.py  run_create_index_sync.py  scan_secrets.py  scheduler.py  self_media_config.py  start_local.py
services/rsshub-local/: README.md  docker-compose.example.yml
tests/: test_fresh_clone_smoke.py
(+95 files in other folders)
